--- a/index.html
+++ b/index.html
@@ -35,24 +35,7 @@
                 </div>
             </div>
         </nav>
-        <!-- <nav class="navbar bg-body-tertiary">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav> -->
+
         <div class="card">
             <div class="addTodoDiv">
                 <button data-bs-toggle="modal" data-bs-target="#addTodoModal">+ Add Todo</button>
@@ -75,6 +58,7 @@
                     <div class="modal-body">
                         <label class="form-label">Add Todo</label>
                         <input type="text" class="form-control" id="inp" placeholder="add todo ...">
+                        <p id="errorPara"></p>
                     </div>
                     <div class="modal-footer">
                         <button id="addLi">Add Todo</button>
@@ -96,6 +80,7 @@
                     <div class="modal-body">
                         <label class="form-label">Update Todo</label>
                         <input type="text" class="form-control" id="updInp" placeholder="update todo ...">
+                        <p id="upderrorPara"></p>
                     </div>
                     <div class="modal-footer">
                         <button id="updLi">Update</button>
