--- a/index.html
+++ b/index.html
@@ -27,10 +27,20 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" aria-current="page" href="#">
+                                Home
+                                <span id="line1"></span>
+                            </a>
                         </li>
-                        <li class="nav-item">Account Settings</li>
-                        <li class="nav-item" id="logout">Logout</li>
+                        <li class="nav-item"><a class="nav-link" href="./account-setting.html">
+                                Account Settings
+                                <span id="line2"></span>
+                            </a></li>
+                        <hr>
+                        <li class="nav-item" id="logout">
+                            Logout
+                            <span id="line1"></span>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -90,7 +100,6 @@
             </div>
         </div>
     </div>
-    <script type="module" src="app.js"></script>
     <script type="module" src="app2.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
