--- a/account-setting.html
+++ b/account-setting.html
@@ -52,12 +52,13 @@
             </div>
             <div class="detailsDiv">
                 <div class="mb-3">
-                    <label class="form-label">Email address</label>
+                    <label class="form-label">Full Name:</label>
                     <input type="text" class="form-control" id="uptName">
                 </div>
             </div>
         </div>
     </div>
+    <script type="module" src="app.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
