google signin done

--- a/signup/signup.html
+++ b/signup/signup.html
@@ -20,7 +20,10 @@
         
         <button id="sbtn" class="btn btn-primary mb-3">Signup</button>
         <p id="errorPara"></p>
-        <p>Already have an account? <a href="../login/login.html">Login</a></p>
+        <p id="alreadyAccountPara">Already have an account? <a href="../login/login.html">Login</a></p>
+
+        <hr class="hr-text" data-content="OR">
+        <button id="googleSignInBtn"><div class="googleIcon"><img src="./googleIcon.png" alt=""></div><div class="googleBtnPara">Login with Google</div></button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
    
