--- a/signup/signup.html
+++ b/signup/signup.html
@@ -22,8 +22,8 @@
         <p id="errorPara"></p>
         <p id="alreadyAccountPara">Already have an account? <a href="../login/login.html">Login</a></p>
 
-        <!-- <hr class="hr-text" data-content="OR">
-        <button id="googleSignInBtn"><div class="googleIcon"><img src="./googleIcon.png" alt=""></div><div class="googleBtnPara">Login with Google</div></button> -->
+        <hr class="hr-text" data-content="OR">
+        <button id="googleSignInBtn"><div class="googleIcon"><img src="./googleIcon.png" alt=""></div><div class="googleBtnPara">Login with Google</div></button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
    
